force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/SVMXA360__MPLNAuthoringLog__c.object-meta.xml
<CustomObject>
    <description>This object logs the details of the authoring of Maintenance Plans.</description>
    <label>Maintenance Plan Authoring Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Plan Authoring Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>