force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__A360MaintenancePlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__A360MaintenancePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the A360 Maintenance Plan record</description>
    <label>A360 Maintenance Plan</label>
    <referenceTo>SVMXA360__SM_MaintenancePlan__c</referenceTo>
    <relationshipLabel>Maintenance Plan Authoring Logs</relationshipLabel>
    <relationshipName>Maintenance_Plan_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>