force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__LogType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LogType__c</fullName>
    <description>Indicated whether it&apos;s a master or child record.</description>
    <inlineHelpText>Indicated whether it&apos;s a master or child record.</inlineHelpText>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>