force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__MaintenancePlanId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the Maintenance Plan record.</description>
    <inlineHelpText>Look up to the Maintenance Plan record.</inlineHelpText>
    <label>Maintenance Plan</label>
    <referenceTo>MaintenancePlan</referenceTo>
    <relationshipLabel>Maintenance Plan Authoring Logs</relationshipLabel>
    <relationshipName>Maintenance_Plan_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>