force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__MaintenancePlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the Maintenance Plan Template record.</description>
    <inlineHelpText>Look up to the Maintenance Plan Template record.</inlineHelpText>
    <label>Maintenance Plan Template</label>
    <referenceTo>SVMXA360__MaintenancePlanTemplate__c</referenceTo>
    <relationshipLabel>Maintenance Plan Authoring Logs</relationshipLabel>
    <relationshipName>Maintenance_Plan_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>