force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__OperationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperationType__c</fullName>
    <description>The type of execution.</description>
    <inlineHelpText>The type of execution.</inlineHelpText>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>