force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__ParentMPLNAuthoringLogId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ParentMPLNAuthoringLogId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Parent MPLN Record.</description>
    <inlineHelpText>Stores the Parent MPLN Record.</inlineHelpText>
    <label>Parent MPLN Authoring Log</label>
    <referenceTo>SVMXA360__MPLNAuthoringLog__c</referenceTo>
    <relationshipLabel>Maintenance Plan Authoring Logs</relationshipLabel>
    <relationshipName>Maintenance_Plan_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>