force-app/main/default/objects/SVMXA360__MPLNAuthoringLog__c/fields/SVMXA360__ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the Service Contract record.</description>
    <inlineHelpText>Look up to the Service Contract record.</inlineHelpText>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Maintenance Plan Authoring Logs</relationshipLabel>
    <relationshipName>Maintenance_Plan_Authoring_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>